--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <h2 class="section-title">About Me</h2>
         <div class="md:flex">
             <div class="md:w-2/3 pr-8">
-                <p>I'm [Your Name], a passionate Junior Front-end Developer based in [Your Location]. I'm proficient in React.js, HTML, CSS, and more. In my free time, I enjoy [Your Hobby].</p>
+                <p>I'm Lurline Nkonde, a passionate Junior Front-end Developer based in Calgary, AB. I'm proficient in React.js, HTML, CSS, and more. In my free time, I enjoy cooking anf baking.</p>
             </div>
             <div class="md:w-1/3 mt-6 md:mt-0">
-                <img src="YOUR_IMAGE_URL" alt="Your Name" class="rounded-lg shadow-md mx-auto">
+                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/163/925/original/IMG-20250211-WA0025_1_.jpg?1745429423" alt="Your Name" class="rounded-lg shadow-md mx-auto">
             </div>
         </div>
     </section>
