--- a/index.html
+++ b/index.html
@@ -1,77 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Lurline Nkonde | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
 </head>
-<body>
-    <header class="bg-white shadow-md sticky top-0">
-        <nav class="container mx-auto flex justify-between py-3">
-            <a href="#" class="font-bold text-xl">My Portfolio</a>
-            <div>
-                <a href="#about" class="nav-link">About</a>
-                <a href="#projects" class="nav-link">Projects</a>
-                <a href="#contact" class="nav-link">Contact</a>
-                <a href="#resume" class="btn">Resume</a>
-            </div>
-        </nav>
-    </header>
+<body class="bg-white text-gray-800 font-inter antialiased">
 
-    <section class="hero py-16 text-center">
-        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/163/925/original/IMG-20250211-WA0025_1_.jpg?1745429423" alt="Your Photo" class="rounded-full w-40 mx-auto mb-6">
-        <h1 class="text-4xl font-bold">Lurline Nkonde</h1>
-        <p class="text-xl mb-6">Junior Front-end Developer</p>
-        <p class="text-gray-600 max-w-2xl mx-auto mb-8">Passionate about creating intuitive and dynamic user experiences.</p>
-        <a href="#contact" class="btn">Get in Touch</a>
+  <header class="bg-white shadow sticky top-0 z-50">
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-xl font-bold">Lurline Nkonde</h1>
+      <nav class="space-x-4">
+        <a href="#about" class="nav-link">About</a>
+        <a href="#skills" class="nav-link">Skills</a>
+        <a href="#projects" class="nav-link">Projects</a>
+        <a href="#contact" class="btn">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <section class="text-center py-16 bg-gray-100">
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/163/925/original/IMG-20250211-WA0025_1_.jpg?1745429423" 
+         alt="Lurline Nkonde" class="w-40 h-40 mx-auto rounded-full shadow-lg mb-4" />
+    <h2 class="text-4xl font-bold mb-2">Lurline Nkonde</h2>
+    <p class="text-xl text-sky-700 font-semibold">Junior Front-end Developer</p>
+    <p class="mt-4 max-w-xl mx-auto text-gray-600">
+      I'm passionate about crafting clean and user-friendly web interfaces. I love building digital products that make life easier.
+    </p>
+  </section>
+
+  <main class="container mx-auto px-6 py-12">
+    <section id="about" class="mb-16">
+      <h3 class="section-title">About Me</h3>
+      <p class="text-lg leading-relaxed">
+        Hi! I'm Lurline, a Junior Front-end Developer with a background in Law. I currently work at Concentrix and enjoy coding, cooking, and basketball.
+        I’m always eager to grow and apply my skills in meaningful ways—especially in collaborative, creative environments.
+      </p>
     </section>
 
-    <section id="about" class="container mx-auto py-12">
-        <h2 class="section-title">About Me</h2>
-        <div class="md:flex">
-            <div class="md:w-2/3 pr-8">
-                <p>I'm Lurline Nkonde, a passionate Junior Front-end Developer based in Calgary, AB. I'm proficient in React.js, HTML, CSS, and more. In my free time, I enjoy cooking anf baking.</p>
-            </div>
-            <div class="md:w-1/3 mt-6 md:mt-0">
-                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/163/925/original/IMG-20250211-WA0025_1_.jpg?1745429423" alt="Your Name" class="rounded-lg shadow-md mx-auto">
-            </div>
+    <section id="skills" class="mb-16">
+      <h3 class="section-title">Skills & Tools</h3>
+      <div class="grid md:grid-cols-2 gap-6">
+        <ul class="list-disc list-inside">
+          <li>HTML5, CSS3, JavaScript (ES6+)</li>
+          <li>React.js, Tailwind CSS</li>
+          <li>Git & GitHub</li>
+          <li>Responsive Web Design</li>
+        </ul>
+        <ul class="list-disc list-inside">
+          <li>VS Code, Figma</li>
+          <li>MacOS</li>
+          <li>Grammarly</li>
+          <li>Problem-solving & Collaboration</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="projects" class="mb-16">
+      <h3 class="section-title">Projects</h3>
+      <div class="grid md:grid-cols-2 gap-6">
+        <div class="card">
+          <h4 class="text-lg font-semibold mb-2">Travel Zambia Website</h4>
+          <p class="text-gray-700">A responsive travel website featuring popular Zambian destinations. Hosted on Netlify.</p>
         </div>
-    </section>
-
-    <section id="projects" class="container mx-auto py-12">
-        <h2 class="section-title">Projects</h2>
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <div class="card">
-                <img src="PROJECT_IMAGE_URL" alt="Project Screenshot" class="rounded-md mb-4">
-                <h3 class="text-xl font-semibold">Project Alpha</h3>
-                <p>Project description.</p>
-                <div class="flex space-x-3">
-                    <a href="#" class="btn">View Live</a>
-                    <a href="#" class="btn bg-gray-600">View Code</a>
-                </div>
-            </div>
-           
-        </div>
-    </section>
-
-    <section id="contact" class="container mx-auto py-12">
-        <h2 class="section-title">Contact</h2>
-        <form action="YOUR_FORM_ENDPOINT" method="POST">
-            <input type="text" name="name" placeholder="Name" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <textarea name="message" placeholder="Message" required></textarea>
-            <button type="submit" class="btn">Send Message</button>
-        </form>
-    </section>
-
-    <footer class="py-8 text-center bg-gray-100">
-        <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
-        <div class="flex justify-center space-x-6">
-            <a href="www.linkedin.com/in/lurline-n" class="text-xl">LinkedIn</a>
-            <a href="https://github.com/Lnko09" class="text-xl">GitHub</a>
-        </div>
-    </footer>
-</body>
-</html>
+        <div class="card">
+          <h4 class="text-lg font-semibold mb-2">World Clock App</h4>
+          <p class="text-gray-700">Built using JavaScript. Displays time across multiple global cities in
