--- a/index.html
+++ b/index.html
@@ -68,4 +68,25 @@
         </div>
         <div class="card">
           <h4 class="text-lg font-semibold mb-2">World Clock App</h4>
-          <p class="text-gray-700">Built using JavaScript. Displays time across multiple global cities in
+          <p class="text-gray-700">Built using JavaScript. Displays time across multiple global cities in real-time.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h3 class="section-title">Contact Me</h3>
+      <p class="text-center text-lg mb-6">Feel free to reach out for collaborations or freelance opportunities!</p>
+      <div class="text-center space-x-4">
+        <a href="mailto:your-email@example.com" class="btn">Email Me</a>
+        <a href="https://github.com/YOUR_USERNAME" target="_blank" class="btn bg-gray-700">GitHub</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="text-center py-6 text-sm text-gray-500">
+    &copy; <span id="year"></span> Lurline Nkonde. Built with ❤️.
+    <script>document.getElementById("year").textContent = new Date().getFullYear();</script>
+  </footer>
+
+</body>
+</html>
