--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
           <li>Responsive Web Design</li>
         </ul>
         <ul class="list-disc list-inside">
-          <li>VS Code, Figma</li>
+          <li>VS Code, Git</li>
+          <li>Netlify</li>
           <li>MacOS</li>
           <li>Grammarly</li>
           <li>Problem-solving & Collaboration</li>
@@ -77,8 +78,8 @@
       <h3 class="section-title">Contact Me</h3>
       <p class="text-center text-lg mb-6">Feel free to reach out for collaborations or freelance opportunities!</p>
       <div class="text-center space-x-4">
-        <a href="mailto:your-email@example.com" class="btn">Email Me</a>
-        <a href="https://github.com/YOUR_USERNAME" target="_blank" class="btn bg-gray-700">GitHub</a>
+        <a href="mailto:lurlinenkonde@gmail.com" class="btn">Email Me</a>
+        <a href="https://github.com/Lnko09" target="_blank" class="btn bg-gray-700">GitHub</a>
       </div>
     </section>
   </main>
