--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/163/925/original/IMG-20250211-WA0025_1_.jpg?1745429423" alt="Lurline Nkonde" class="profile-pic"/>
       <div>
         <h1>Lurline Nkonde</h1>
-        <p>Front-End Web Developer | Creative Thinker | Law Graduate</p>
+        <p>Junior Front-end Developer | Law Graduate turned Coder</p>
+        <p>Based in Lusaka, Zambia</p>
         <button id="mode-toggle">🌙 Toggle Dark Mode</button>
       </div>
     </div>
@@ -22,13 +23,22 @@
     <section class="about">
       <h2>About Me</h2>
       <p>
-        I'm a law graduate turned web developer with a passion for creating beautiful, responsive websites.
-        I enjoy blending design with functionality to build user-friendly digital experiences. Skilled in HTML, CSS, and JavaScript.
+        I'm a passionate front-end web developer with a background in law. I work from home using my MacBook Pro, VS Code, and GitHub to create beautiful and responsive websites. I love problem-solving and bringing designs to life with HTML, CSS, JavaScript, and React.js.
       </p>
+      <p>Fun fact: I talk to my code when it doesn't work—sometimes it listens!</p>
+    </section>
+
+    <section class="tools-tech">
+      <h2>Tools & Technologies</h2>
+      <ul>
+        <li><strong>Tools:</strong> VS Code, MacOS, GitHub</li>
+        <li><strong>Technologies:</strong> HTML, CSS, JavaScript, React.js, Bootstrap, Responsive Design</li>
+        <li><strong>Equipment:</strong> MacBook Pro, Logitech MX Master, External Monitor</li>
+      </ul>
     </section>
 
     <section class="projects">
-      <h2>Projects</h2>
+      <h2>Personal Projects</h2>
       <div class="project-grid">
         <div class="project-card">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/165/472/original/Screenshot_2025-05-10_185309.png?1746924804" alt="Travel Zambia">
@@ -44,6 +54,31 @@
         </div>
       </div>
     </section>
+
+    <section class="social">
+      <h2>Find Me Online</h2>
+      <ul>
+        <li><a href="https://www.linkedin.com" target="www.linkedin.com/in/lurline-n">LinkedIn</a></li>
+        <li><a href="https://github.com" target="https://github.com/Lnko09">GitHub</a></li>
+        <li><a href="mailto:lurline@email.com">Email Me</a></li>
+        <li><a href="https://www.shecodes.io" target="https://www.shecodes.io/graduates/114049-lurline-nkonde">SheCodes</a></li>
+      </ul>
+    </section>
+
+    <section class="resume">
+      <h2>Resume</h2>
+      <p><a href="https://www.dropbox.com/resume-link" target="https://www.dropbox.com/scl/fi/mvryo5lh5iptouynjt2cq/Lurline-Nkonde-Resume-2025.docx">Download My Resume</a></p>
+    </section>
+
+    <section class="contact">
+      <h2>Contact Me</h2>
+      <form action="#" method="post">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </section>
   </main>
 
   <footer>
@@ -58,3 +93,4 @@
   </script>
 </body>
 </html>
+
